MemeMe 1.0 - all features working as expected

--- a/MemeTest/Info.plist
+++ b/MemeTest/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>choose a picture from the image library stored on the phone to &quot;meme&quot;</string>
+	<key>NSCameraUsageDescription</key>
+	<string>use the camera to take a picture to &quot;meme&quot;</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
